fix: :bug: 优化顶栏、页签、边栏的样式

--- a/styles/layout/tab-bar.scss
+++ b/styles/layout/tab-bar.scss
@@ -30,6 +30,9 @@ $item-type: "medium";
     &--focus {
       @include color("focus");
       @include item-unchange("focus");
+      &::after {
+        display: none;
+      }
 
       .item__graphic {
         @include color("focus");
