--- a/plugin/tab-bar/main.scss
+++ b/plugin/tab-bar/main.scss
@@ -1,5 +1,5 @@
 @use "sass:math";
-@use "../../../styles/common" as *;
+@use "../../style/common" as *;
 
 $top-h: 40px;
 
@@ -49,7 +49,7 @@ $top-h: 40px;
 // top-bar
 #toolbar {
   margin-bottom: -$top-h;
-  .toolbar__item{
+  .toolbar__item {
     z-index: 2;
   }
 }
