fix: :bug: 优化选中文字底色，提高可读性
link #66

--- a/style/dialog/bazaar.scss
+++ b/style/dialog/bazaar.scss
@@ -77,6 +77,10 @@
       @include icon-btn("pop", get($component-size, "base"), 12px, true);
       &[data-type="install-t"] {
         @include item("focus", 0, true);
+        &:hover svg {
+          color: get($text, "focus");
+          transition: get($transition, "all");
+        }
       }
     }
   }
