fix: :bug: 修复钉住页签的图标样式

--- a/style/layout/tab-bar.scss
+++ b/style/layout/tab-bar.scss
@@ -79,6 +79,11 @@ $btn-w: get($component-size, "small");
     &--pin {
       background-color: get($bg, "component", 1);
       min-width: unset;
+      .item__icon,
+      .item__graphic{
+        padding: 0;
+        margin: 0 $interval;
+      }
     }
 
     &--focus {
