--- a/plugin/status/main.scss
+++ b/plugin/status/main.scss
@@ -40,9 +40,7 @@ $msg-icon-w: 14px;
     box-shadow: get($shadow, 1);
 
     .b3-menu {
-      bottom: $s-h !important;
       left: unset !important;
-      right: $dock-w;
       z-index: 0;
     }
 
@@ -51,13 +49,27 @@ $msg-icon-w: 14px;
     }
   }
 
-  #barHelp .b3-menu {
-    bottom: $s-h + $btn-interval + $fn-space * 2 !important;
-    right: $fn-space !important;
-
-    .dock-menu {
+  #barHelp {
+    > .b3-menu {
       bottom: $s-h + $btn-interval + $fn-space * 2 !important;
-      right: 180px + $fn-space * 2 !important;
+      right: $fn-space !important;
+      display: block !important;
+      visibility: hidden;
+      transform: scale(0.5);
+      opacity: 0;
+      transform-origin: 60% 100%;
+      transition: all get($transition-duration, "base")
+        get($transition-function, "ease-in-out");
+      &[data-switch="open"] {
+        opacity: 1;
+        transform: scale(1);
+        visibility: visible;
+      }
+    }
+
+    .rc-dock-menu {
+      bottom: 0 !important;
+      right: 180px + $fn-space !important;
     }
   }
 
@@ -87,7 +99,7 @@ $msg-icon-w: 14px;
         mask: none;
       }
       &:hover {
-        max-width: 1000px;
+        max-width: 1000px !important;
       }
     }
   }
@@ -111,15 +123,15 @@ $msg-icon-w: 14px;
 }
 
 // wnd
-#layouts > .fn__flex {
-  > .fn__flex-column:not(.layout__center) {
-    > .fn__flex {
-      &:has(+ .layout__resize.fn__none),
-      &:last-child {
-        > [data-type="wnd"] {
-          padding-bottom: 0 !important;
-        }
-      }
-    }
-  }
-}
+// #layouts > .fn__flex {
+//   > .fn__flex-column:not(.layout__center) {
+//     > .fn__flex {
+//       &:has(+ .layout__resize.fn__none),
+//       &:last-child {
+//         > [data-type="wnd"] {
+//           padding-bottom: 0 !important;
+//         }
+//       }
+//     }
+//   }
+// }
