fix: :bug: 修复页签栏关闭动画卡顿问题

--- a/plugin/tabBar/main.scss
+++ b/plugin/tabBar/main.scss
@@ -84,7 +84,8 @@ $item-radius: get($radius, $item-type);
 
     .item {
       @include item-tran("base");
-      transition: unset !important;
+      transition: max-width get($transition-duration, "base")
+        get($transition-function, "ease-in-out") !important;
       height: $item-h;
       background-color: transparent;
       padding: 0 math.div($item-h - $inner-btn-w, 2);
